feat: Add multi-material support and implement first-fit cutting algorithm
- Updated index.html to include debug scripts for development.
- Enhanced CuttingResultSection.vue to display cutting results and statistics.
- Modified SettingsSection.vue to indicate the current optimization strategy status.
- Updated HomePage.vue to integrate cutting results and materials from the store.
- Implemented CuttingPlannerService to coordinate cutting algorithms and handle layout calculations.
- Added FirstFitCuttingService for the first-fit cutting algorithm implementation.
- Introduced debug scripts (debug.js and integrityDebug.js) for testing multi-material functionality and data integrity.
- Documented algorithm implementation status in algorithms.md.
- Adjusted settings store to use the first-fit algorithm as the default optimization strategy.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <!-- Debug scripts for development -->
+    <script src="/debug.js"></script>
+    <script src="/integrityDebug.js"></script>
   </body>
 </html>
